--- a/src/main/resources/docs/2.Premessa.adoc
+++ b/src/main/resources/docs/2.Premessa.adoc
@@ -23,7 +23,8 @@ In questo contesto, NoTI-ER (più precisamente, il suo Access Point) svolge la f
 di secondo o terzo corner, a seconda di quale sia l'indirizzamento del flusso documentale
 in atto.
 
-image::immagini/4-corner Peppol.png[align="left", title= "Modello 4-corners Peppol"]
+.Modello 4-corners di Peppol
+image::images\2.Premessa-2f4a3.png[align=center]
 
 
 Inoltre, con l'approvazione di uno specifico decreto del Ministero dell'Economia e Finanze
@@ -37,7 +38,8 @@ In particolare:
 ricezione e colloquio (_Figura 2_).
 
 .Inquadramento del Sistema di Interscambio
-image::immagini/inquadramento SdI.png[align:"left"]
+image::images\2.Premessa-e2c93.png[align=center]
+
 
 Con l'entrata in vigore del suddetto decreto, si è resa evidente la necessità
 di accreditare NoTI-ER come Intermediario presso SdI, ma anche di realizzare
@@ -51,7 +53,7 @@ del _Sistema Sanitario Nazionale_ di emettere *ordini d'acquisto* in formato
 elettronico e di trasmetterli per il tramite del *Nodo Smistamento Ordini (NSO)*.
 
 .Inquadramento del Nodo Smistamento Ordini
-image::immagini/inquadramento NSO.png[align:"left"]
+image::images\2.Premessa-be12c.png[align=center]
 
 
 Il formato dei documenti accettati da NSO e i processi attraverso i quali avviene lo scambio
